syntax = "proto3";

package varfish.v1.svs;

// Enumeration for storing SV types from the caller.
enum SvType {
    // Deletions.
    Del = 0;
    // Duplications.
    Dup = 1;
    // Inversions.
    Inv = 2;
    // Insertion.
    Ins = 3;
    // Break-end.
    Bnd = 4;
    // Copy number variation.
    Cnv = 5;
}

// Background database record.
message BgDbRecord {
    // Numeric chromosome number of start position.
    int32 chrom_no = 1;
    // Numeric chromosome number of end position.
    int32 chrom_no2 = 2;
    // Structural variation type.
    SvType sv_type = 3;
    // 1-based start position.
    int32 start = 4;
    // 1-based stop position.
    int32 stop = 5;
    // Number of matching entries.
    uint32 count = 6;
}

// Record for the background database.
message BackgroundDatabase {
    // List of background database records.
    repeated BgDbRecord records = 1;
}

// Entry in a masked region database.
message MaskedDbRecord {
    // Numeric chromosome number.
    int32 chrom_no = 1;
    // 1-based start position.
    int32 start = 2;
    // 1-based stop position.
    int32 stop = 3;
}

// Database of masked regions.
message MaskedDatabase {
    // List of masked regions.
    repeated MaskedDbRecord records = 1;
}

// Record for the gene region database.
message GeneRegionRecord {
    // Numeric chromosome number.
    int32 chrom_no = 1;
    // 1-based start position.
    int32 start = 2;
    // 1-based stop position.
    int32 stop = 3;
    // Numeric gene identifier.
    uint32 gene_id = 4;
}

// Gene region database.
message GeneRegionDatabase {
    // List of gene region records.
    repeated GeneRegionRecord records = 1;
}

// Record for the gene cross-link database.
message XlinkRecord {
    // HGNC ID (e.g., "HGNC:123")
    string hgnc_id = 1;
    // Gene symbol.
    string symbol = 2;
    // Entrez gene ID.
    uint32 entrez_id = 3;
    // Ensembl gene ID.
    uint32 ensembl_id = 4;
}

// Gene cross-link database.
message XlinkDatabase {
    // List of cross-link records.
    repeated XlinkRecord records = 1;
}
